Fix overflow

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -71,7 +71,7 @@ $swiper-navigation-size: 30px;
   body {
     overflow: auto;
     overscroll-behavior: none;
-    overflow-x: hidden;
+    overflow: hidden;
   }
   
   .center {
